--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,8 @@
+// abstracts
+@import './sass/abstracts/mixins';
+@import './sass/abstracts/variables';
+
+
 // base
 @import './sass/base/base';
 
@@ -6,6 +11,7 @@
 @import './sass/components/video';
 
 // layout
+@import './sass/layout/grid';
 @import './sass/layout/header';
-
-
+@import './sass/layout/section';
+@import './sass/layout/footer';
