--- a/src/sass/components/_video.scss
+++ b/src/sass/components/_video.scss
@@ -1,9 +1,50 @@
-.video-item {
-  display: flex !important;
-  align-items: center !important;
-  cursor: pointer;
-}
+.video {
+  &__box {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    margin-bottom: 2.5rem;
 
-.video-item.item img {
-  max-width: 180px;
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__content {
+    :first-child {
+      font-size: 2rem;
+    }
+
+    :last-child {
+      font-size: $default-font-size;
+    }
+
+    :nth-of-type(n) {
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__item {
+    display: flex;
+    align-items: flex-start;
+    cursor: pointer;
+    margin-bottom: 1rem;
+
+    img {
+      max-width: 180px;
+    }
+
+    &-text {
+      padding: 1rem;
+      font-size: 1.2rem;
+    }
+  }
+  
+
+
 }
