--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -15,6 +15,10 @@
     letter-spacing: 2px;
     font-size: 4rem;
     font-weight: 700;
+
+    @include respond(phone) {
+      font-size: 3rem;
+    }
   }
 
   &__searchBar {
