--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -57,9 +57,26 @@
   }
 
   &__avatar {
+    position: relative;
     width: 6rem;
     height: 6rem;
-    
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: calc(6rem + 10px);
+    height: calc(6rem + 10px);
+    background-image: linear-gradient(45deg,
+    #f09433 0%, #e6683c 25%,
+    #dc2743 50%, #6902be 75%,
+    #bc1888 100%);
+    border-radius: 50%;
+    z-index: -1;
+  }
+
     img {
       vertical-align: middle;
       border-radius: 50%;
