--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -85,6 +85,9 @@
       vertical-align: middle;
       border-radius: 50%;
       width: 100%;
+      height: 100%;
+      box-shadow: 0 0 0 0.25rem #FFF;
+
     }
   }
 
