--- a/src/sass/components/_video.scss
+++ b/src/sass/components/_video.scss
@@ -29,6 +29,44 @@
     }
   }
 
+  &__commentItem{
+    display: flex;
+    padding: 1rem;
+
+    &-avatar {
+      width: 5rem;
+      height: 5rem;
+      border-radius: 50%;
+      margin-right: 1.5rem;
+    }
+
+    &-title {
+      display: flex;
+
+      h3 {
+        margin-right: 1rem;
+        margin-bottom: 0.5rem;
+        font-size: 1.3rem;
+      }
+
+      span {
+        color: #606060;
+        font-size: 1.2rem;
+      }
+    }
+
+    &-comment {
+      font-size: 1.4rem;
+    }
+  }
+
+  &__list {
+    padding: 1rem;
+    border: 1px solid #ccc;
+    overflow-y: auto;
+    max-height: 56.6rem;
+  }
+
   &__item {
     display: flex;
     align-items: flex-start;
