--- a/src/sass/components/_video.scss
+++ b/src/sass/components/_video.scss
@@ -102,9 +102,20 @@
       padding: 1rem;
       font-size: 1.2rem;
     }
+
     &:hover {
       background-color: #e5e6e4;
       box-shadow: 0 2px 4px #606060;
+      @include respond(phone) {
+        background-color: #fff;
+        box-shadow: none;
+      }
+    }
+
+    &:active {
+      @include respond(phone) {
+        background-color: #e5e6e4;
+      }
     }
   }
 }
